# peace

./: .envrc  README.md  button.py  pyproject.toml  qr-to-self.py
.github/workflows/: jekyll-gh-pages.yml
src/badges/: __main__.py  elements.py  qr_to_self.py
website/: frame.png:Zone.Identifier  index.md
website/_layouts/: default.html
